--- a/ChatWeb/chat-app/src/app/pages/auth/change-pass/change-pass.component.html
+++ b/ChatWeb/chat-app/src/app/pages/auth/change-pass/change-pass.component.html
@@ -35,11 +35,11 @@
     </div>
   
     <div class="alert success" *ngIf="formSubmitted && isSuccess">
-      Password has been change successfully !!!
+      Thay đổi mật khẩu thành công !!!
     </div>
 
     <div class="alert fail" *ngIf="formSubmitted && !isSuccess">
-      Fail to change password !!!
+      Thay đổi mật khẩu thất bại !!!
     </div>  
   
   </div>
