--- a/ChatWeb/chat-app/src/app/pages/auth/forget-password/forget-password.component.html
+++ b/ChatWeb/chat-app/src/app/pages/auth/forget-password/forget-password.component.html
@@ -25,11 +25,11 @@
   </div>
   
   <div class="alert success" *ngIf="formSubmitted && isSuccess">
-    Email has been sent successfully. Please check your inbox to reset your password.
+    Email đã được gửi thành công. Vui lòng kiểm tra hộp thư đến của bạn để đặt lại mật khẩu.
   </div>
 
   <div class="alert fail" *ngIf="formSubmitted && !isSuccess">
-    Fail to send email !!!
+    Gửi email thất bại !!!
   </div>  
 
 </div>
