--- a/ChatWeb/chat-app/src/app/pages/sidebar/sidebar.component.html
+++ b/ChatWeb/chat-app/src/app/pages/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <nav class="menu">
   <ul class="items">
     <li class="avatar" (click)="onNavigate(0)">
-      <div class="photo" [style.backgroundImage]="'url(' + (user?.avatarUrl || defaultAvatarUrl) + ')'">
-        <!-- <div class="photo" [style.backgroundImage]="'url(' + defaultAvatarUrl + ')'"> -->
+      <!-- <div class="photo" [style.backgroundImage]="'url(' + user.avatarUrl || defaultAvatarUrl + ')'"> -->
+        <div class="photo" [style.backgroundImage]="'url(' + defaultAvatarUrl + ')'">
       </div>
     </li>
 
