--- a/ChatWeb/chat-app/src/app/pages/auth/forget-password/forget-password.component.css
+++ b/ChatWeb/chat-app/src/app/pages/auth/forget-password/forget-password.component.css
@@ -23,7 +23,7 @@ i {
   
 .container {
   position: relative;
-  width: 30%;
+  width: 350px;
   background: #fff;
   padding: 40px 30px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
