--- a/ChatWeb/chat-app/src/app/pages/profile/profile.component.html
+++ b/ChatWeb/chat-app/src/app/pages/profile/profile.component.html
@@ -2,14 +2,7 @@
     <div class="row">
       <div class="d-flex flex-column align-items-center text-center">
         <div *ngIf="user">
-          <img [src]="user.avatarUrl || defaultAvatarUrl" alt="Admin" class="rounded-circle p-1 bg-primary" width="110"style="cursor: pointer" (click)="triggerFileInput()">
-          
-          <input type="file"
-           #fileInput
-           accept="image/*"
-           style="display: none"
-           (change)="onFileSelected($event)">
-
+          <img [src]="user.avatarUrl || defaultAvatarUrl" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
           <div class="mt-3">
             <h4>{{ user.name }}</h4>
             <!-- <p class="text-muted font-size-sm">{{ user.address }}</p> -->
@@ -34,7 +27,7 @@
           <div class="row mb-3">
             <div class="col-sm-3"><h6 class="mb-0">Email</h6></div>
             <div class="col-sm-9 text-secondary">
-              <input type="text" class="form-control" formControlName="email" [disabled]="true" readonly>
+              <input type="text" class="form-control" formControlName="email">
               <div class="error" *ngIf="infoChangeForm.get('email')!.invalid && (infoChangeForm.get('email')!.touched || infoChangeForm.get('email')!.dirty)">
                 <small *ngIf="infoChangeForm.get('email')!.errors?.['required']">Email is required.</small>
                 <small *ngIf="infoChangeForm.get('email')!.errors?.['email']">Enter a valid email.</small>
