--- a/ChatWeb/chat-app/src/app/pages/modal/modal.component.html
+++ b/ChatWeb/chat-app/src/app/pages/modal/modal.component.html
@@ -17,7 +17,7 @@
           <input
             type="text"
             class="email-searching"
-            placeholder="Tìm email bạn bè"
+            placeholder="Tìm bạn bè"
             [(ngModel)]="searchTerm"
             (keyup.enter)="searchFriend()"
           />
