--- a/ChatWeb/chat-app/src/app/pages/chatting/chatting.component.css
+++ b/ChatWeb/chat-app/src/app/pages/chatting/chatting.component.css
@@ -324,6 +324,20 @@ border: 3px solid #FAFAFA;
   padding: 25px 0px 25px 20px;
   height: 75vh;
   overflow-y: auto;
+    /* Chrome, Safari scroll */
+  &::-webkit-scrollbar {
+    width: 8px;
+    height: 6px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent; /* ẩn nền track */
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2); /* thanh kéo màu mờ, có thể là transparent */
+    border-radius: 4px;
+  }
   /* display: flex;
   flex-direction: column;
   justify-content: space-between; */
@@ -393,6 +407,9 @@ border: 3px solid #FAFAFA;
 .response .text {
   background-color: #e3effd !important;
 }
+.override-ml {
+  margin-left: 0 !important;
+}
 
 .footer-chat {
   width:-webkit-fill-available;
@@ -400,7 +417,7 @@ border: 3px solid #FAFAFA;
   display:flex;
   align-items: center;
   position:absolute;
-  bottom: 12px;
+  bottom: 14px;
   background-color: transparent;
   background-color: #f5f5f5;
   
@@ -478,7 +495,7 @@ border: 3px solid #FAFAFA;
   background-color: #fff;
   border-radius: 30px;
   width: 88%;
-  margin-left: 20px;
+  margin-left: 8px;
   justify-content: space-between;
 }
 
@@ -729,16 +746,39 @@ border: 3px solid #FAFAFA;
 .file-preview a:hover {
   background: #e0e0e0;
 }
-.footer-chat .preview-container{
+.footer-chat .preview-container {
   position: absolute;
-  bottom: 70px;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 120px);
+  max-width: 70%;
+  width: 100%;
+  gap: 8px;
   text-align: left;
-  .image-preview{
+
+  overflow: auto;
+  max-height: 150px;
+
+  /* Chrome, Safari scroll */
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent; /* ẩn nền track */
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2); /* thanh kéo màu mờ, có thể là transparent */
+    border-radius: 4px;
+  }
+
+  .image-preview {
     margin-left: 0;
   }
 }
+
+
 .footer-chat .cancel-file{
   border: none;
   background-color: transparent;
@@ -789,13 +829,7 @@ border: 3px solid #FAFAFA;
   margin-left: 0.5rem;
 }
 
-.preview-container {
-  display: flex;
-  flex-wrap: wrap;           /* Cho phép xuống dòng khi quá rộng */
-  gap: 12px;                 /* Khoảng cách giữa các ảnh */
-  align-items: flex-start;
-  margin-top: 10px;
-}
+
 
 .image-wrapper {
   display: flex;
@@ -812,10 +846,15 @@ border: 3px solid #FAFAFA;
   border: 1px solid #ccc;
 }
 
-.file-name {
-  font-size: 12px;
+
+ .file-name {
   text-align: center;
-  margin: 4px 0;
+  font-size: 14px;
+  /* white-space: nowrap; */
+  /* overflow: hidden;
+  text-overflow: ellipsis; */
+  flex-grow: 1;
+  width: 100px;
   word-break: break-all;
 }
 
@@ -825,12 +864,16 @@ border: 3px solid #FAFAFA;
   color: red;
   font-size: 16px;
   cursor: pointer;
+  position: absolute;
+  margin-right:-70px;
 }
 .file-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 150px;
+  background-color: #fff;
+  padding-top: 10px;
 }
 
 .doc-preview {
@@ -840,10 +883,4 @@ border: 3px solid #FAFAFA;
   border-radius: 6px;
 }
 
-.file-icon {
-  font-size: 14px;
-  text-align: center;
-  padding: 10px;
-  width: 100%;
-}
 
