--- a/ChatWeb/chat-app/src/app/pages/profile/modal-change-pass/modal-change-pass.component.html
+++ b/ChatWeb/chat-app/src/app/pages/profile/modal-change-pass/modal-change-pass.component.html
@@ -3,7 +3,7 @@
     <article class="modal-container">
       <header class="modal-container-header">
         <h5 class="modal-container-title">          
-          Change password
+          Thay đổi mật khẩu
         </h5>
       </header>
 
@@ -14,7 +14,7 @@
               <div class="box-container">
                 <div class="input-box">
                     <i class="fa-solid fa-lock"></i>
-                  <input type="password" formControlName="password" placeholder="Enter your new password">
+                  <input type="password" formControlName="password" placeholder="Nhập mật khẩu mới">
                 </div>
                 <div class="error">
                     <small *ngIf="changeNewPassForm.controls['password'].invalid && changeNewPassForm.controls['password'].touched">
@@ -24,13 +24,23 @@
                 </div>
                 <div class="input-box">
                     <i class="fa-solid fa-square-check"></i>
-                    <input type="password" formControlName="confirmPassword" placeholder="Confirm password">
+                    <input type="password" formControlName="confirmPassword" placeholder="Nhập lại mật khẩu mới">
                   </div>
                 <div class="error">
                     <small *ngIf="changeNewPassForm.get('confirmPassword')?.touched && changeNewPassForm.get('confirmPassword')?.value !== changeNewPassForm.get('password')?.value">
-                        Passwords must be the same
+                        Mật khẩu phải giống nhau
                     </small>                      
                 </div>
+
+                <div class="input-box">
+                    <i class="fa-solid fa-square-check"></i>
+                    <input type="password" formControlName="oldPassword" placeholder="Mật khẩu cũ">
+                  </div>
+                <!-- <div class="error">
+                    <small *ngIf="changeNewPassForm.get('confirmPassword')?.touched && changeNewPassForm.get('confirmPassword')?.value !== changeNewPassForm.get('password')?.value">
+                        Passwords must be the same
+                    </small>                      
+                </div> -->
 
               </div>
             </div>
@@ -39,20 +49,24 @@
       </div>
       
         <div class="alert success" *ngIf="formSubmitted && isSuccess">
-          Password has been change successfully !!!
+          Thay đổi mật khẩu thành công !!!
         </div>
 
         <div class="alert fail" *ngIf="formSubmitted && !isSuccess">
-          Fail to change password !!!
+          Thay đổi mật khẩu thất bại, vui lòng kiểm tra lại mật khẩu cũ !!!
         </div>  
       
       </div>
 
       <footer class="modal-container-footer">
         <button class="button is-ghost" (click)="close()">Cancel</button>
-        <button class="button is-primary" (click)="onChange()">
-          Submit
+        <button class="button is-primary" 
+                (click)="onChange()" 
+                [disabled]="!changeNewPassForm.valid || !passwordsMatch()"
+                [style.cursor]="(!changeNewPassForm.valid || !passwordsMatch()) ? 'default' : 'pointer'">
+          Xác nhận
         </button>
+
       </footer>
     </article>
   </div>
