--- a/ChatWeb/chat-app/src/app/pages/profile/profile.component.html
+++ b/ChatWeb/chat-app/src/app/pages/profile/profile.component.html
@@ -2,7 +2,12 @@
     <div class="row">
       <div class="d-flex flex-column align-items-center text-center">
         <div *ngIf="user">
-          <img [src]="user.avatarUrl || defaultAvatarUrl" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
+          <img [src]="user.avatarUrl || defaultAvatarUrl" alt="Admin" class="rounded-circle p-1 bg-primary" width="110"style="cursor: pointer" (click)="triggerFileInput()">
+            <input type="file"
+            #fileInput
+            accept="image/*"
+            style="display: none"
+            (change)="onFileSelected($event)">
           <div class="mt-3">
             <h4>{{ user.name }}</h4>
             <!-- <p class="text-muted font-size-sm">{{ user.address }}</p> -->
@@ -27,7 +32,7 @@
           <div class="row mb-3">
             <div class="col-sm-3"><h6 class="mb-0">Email</h6></div>
             <div class="col-sm-9 text-secondary">
-              <input type="text" class="form-control" formControlName="email">
+              <input type="text" class="form-control" formControlName="email"  [disabled]="true" readonly>
               <div class="error" *ngIf="infoChangeForm.get('email')!.invalid && (infoChangeForm.get('email')!.touched || infoChangeForm.get('email')!.dirty)">
                 <small *ngIf="infoChangeForm.get('email')!.errors?.['required']">Email is required.</small>
                 <small *ngIf="infoChangeForm.get('email')!.errors?.['email']">Enter a valid email.</small>
@@ -58,10 +63,10 @@
           <div class="row">
             <div class="col-sm-2"></div>
             <div class="col-sm-4 text-secondary">
-              <input type="button" class="btn btn-primary px-4" value="Save Changes" (click)="saveChanges()">
+              <input type="button" class="btn btn-primary px-4" value="Lưu thay đổi" (click)="saveChanges()">
             </div>
             <div class="col-sm-4 text-secondary">
-              <input type="button" class="btn btn-primary px-4" value="Change password" (click)="toggleModal()">
+              <input type="button" class="btn btn-primary px-4" value="Thay đổi mật khẩu" (click)="toggleModal()">
             </div>
   
             <app-modal-change-pass
@@ -75,10 +80,10 @@
     </div>
     
     <div class="alert success" *ngIf="formSubmitted && isSuccess">
-      Info has been changed successfully 😊!!!
+      Cập nhật thông tin thành công 😊!!!
     </div>
   
     <div class="alert fail" *ngIf="formSubmitted && !isSuccess">
-      Fail to change info !!!
+      Cập nhật thông tin thất bại !!!
     </div>  
   </div>
