--- a/ChatWeb/chat-app/src/app/pages/auth/forget-password/forget-password.component.html
+++ b/ChatWeb/chat-app/src/app/pages/auth/forget-password/forget-password.component.html
@@ -2,7 +2,7 @@
 <div class="parent">
   <div class="container">
       <div div class="form-content">
-        <div class="title">Forgot Password</div>
+        <div class="title">Quên mật khẩu</div>
         <form (ngSubmit)="onReset()" [formGroup]="forgetPassForm">
           <div class="input-boxes">
             <div class="box-container">
@@ -12,12 +12,12 @@
               </div>
               <div class="error">
                 <small *ngIf="forgetPassForm.get('email')?.invalid && (forgetPassForm.get('email')?.touched || forgetPassForm.get('email')?.dirty)">
-                  <span *ngIf="forgetPassForm.get('email')?.errors?.['required']">Email is required</span>
-                  <span *ngIf="forgetPassForm.get('email')?.errors?.['email']">Enter a valid email</span>
+                  <span *ngIf="forgetPassForm.get('email')?.errors?.['required']">Email là bắt buộc</span>
+                  <span *ngIf="forgetPassForm.get('email')?.errors?.['email']">Email chưa hợp lệ</span>
                 </small>
               </div>
             </div>
-            <button type="button" class="btn" [disabled]="loading" (click)="onReset()">Send Email</button>
+            <button type="button" class="btn" [disabled]="loading" (click)="onReset()">Gửi Email</button>
           </div>
         </form>
       
