--- a/ChatWeb/chat-app/src/app/pages/auth/auth.component.html
+++ b/ChatWeb/chat-app/src/app/pages/auth/auth.component.html
@@ -12,7 +12,7 @@
     <div class="forms">
         <div class="form-content">
           <div class="login-form">
-            <div class="title">Login</div>
+            <div class="title">Đăng nhập</div>
           <form action="#" [formGroup]="loginForm">
             <div class="input-boxes">
               <div class="box-container">
@@ -22,8 +22,8 @@
                 </div>
                 <div class="error">
                   <small *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched">
-                    <span *ngIf="loginForm.controls['email'].errors?.['required']">Email is required</span>
-                    <span *ngIf="loginForm.controls['email'].errors?.['email']">Enter a valid email</span>
+                    <span *ngIf="loginForm.controls['email'].errors?.['required']">Email là bắt buộc</span>
+                    <span *ngIf="loginForm.controls['email'].errors?.['email']">Email chưa hợp lệ</span>
                   </small>
                 </div>
               </div>
@@ -34,74 +34,83 @@
                 </div>
                 <div class="error">
                   <small *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched">
-                    <span *ngIf="loginForm.controls['password'].errors?.['required']">Password is required</span>
-                    <span *ngIf="loginForm.controls['password'].errors?.['minlength']">Password must be at least 6 characters</span>
+                    <span *ngIf="loginForm.controls['password'].errors?.['required']">Chưa nhập mật khẩu</span>
+                    <span *ngIf="loginForm.controls['password'].errors?.['minlength']">Mật khẩu có ít nhất 6 kí tự</span>
                   </small>
                 </div>  
               </div>
               <div class="form-footer">
-                <div class="forgotpass text"><a (click)="onNavigateForgotPassWord()">Forgot password?</a></div>
-                <div class="form-check">
+                <div class="forgotpass text"><a (click)="onNavigateForgotPassWord()">Quên mật khẩu ?</a></div>
+                <!-- <div class="form-check">
                   <input class="form-check-input text" type="checkbox" id="autoSizingCheck2">
                   <label class="form-check-label " for="autoSizingCheck2">
-                    Remember me
+                    Nhớ tài khoản
                   </label>
-                </div>
+                </div> -->
               </div>
               <div class="button input-box">
-                <input type="submit" value="Sumbit" (click)="onLogin()" (keydown.enter)="onLogin()">
+                <input type="submit" value="Đăng nhập" (click)="onLogin()" (keydown.enter)="onLogin()">
               </div>
-              <div class="text sign-up-text">Don't have an account? <label for="flip">Sigup now</label></div>
+              <div class="text sign-up-text">Chưa có tài khoản? <label for="flip">Đăng ký</label></div>
             </div>
         </form>
       </div>
         <div class="signup-form">
-          <div class="title">Signup</div>
+          <div class="title">Đăng ký tài khoản</div>
         <form action="#" [formGroup]="registerForm">
             <div class="input-boxes">
               <div class="box-container">
                 <div class="input-box">
-                  <input type="text" formControlName="name" placeholder="Enter your name">                 
+                  <input type="text" formControlName="name" placeholder="Username">                 
                 </div>
                 <div class="error">
                   <small *ngIf="registerForm.controls['name'].invalid && registerForm.controls['name'].touched">
-                    <span *ngIf="registerForm.controls['name'].errors?.['required']">Name is required</span>
+                    <span *ngIf="registerForm.controls['name'].errors?.['required']">Tên là bắt buộc</span>
                   </small>
                 </div>
               </div>
               <div class="box-container">
                 <div class="input-box">
-                  <input type="email" formControlName="email" placeholder="Enter your email">
+                  <input type="email" formControlName="email" placeholder="Email của bạn">
                 </div> 
                 <div class="error">
                   <small *ngIf="registerForm.controls['email'].invalid && registerForm.controls['email'].touched">
-                    <span *ngIf="registerForm.controls['email'].errors?.['required']">Email is required</span>
-                    <span *ngIf="registerForm.controls['email'].errors?.['email']">Enter a valid email</span>
+                    <span *ngIf="registerForm.controls['email'].errors?.['required']">Email là bắt buộc</span>
+                    <span *ngIf="registerForm.controls['email'].errors?.['email']">Email chưa hợp lệ</span>
                   </small>
                 </div>
               </div>
               <div class="box-container">
                 <div class="input-box">
-                  <input type="password" formControlName="password" placeholder="Enter your password">
+                  <input type="password" formControlName="password" placeholder="Mật khẩu">
                 </div>
                 <div class="error">
                   <small *ngIf="registerForm.controls['password'].invalid && registerForm.controls['password'].touched">
-                    <span *ngIf="registerForm.controls['password'].errors?.['required']">Password is required</span>
-                    <span *ngIf="registerForm.controls['password'].errors?.['minlength']">Password must be at least 6 characters</span>
+                    <span *ngIf="registerForm.controls['password'].errors?.['required']">Chưa nhập mật khẩu</span>
+                    <span *ngIf="registerForm.controls['password'].errors?.['minlength']">Mật khẩu có ít nhất 6 kí tự</span>
                   </small>
                 </div>
               </div>
               <div class="button input-box">
-                <input type="submit" value="Sumbit" (click)="onRegister()" (keydown.enter)="onRegister()">
+                <input type="submit" value="Tạo tài khoản" (click)="onRegister()" (keydown.enter)="onRegister()">
               </div>
-              <div class="text sign-up-text">Already have an account? <label for="flip">Login now</label></div>
+              <div class="text sign-up-text">Đã có tài khoản ? <label for="flip">Đăng nhập</label></div>
             </div>
       </form>
     </div>
     </div>
     </div>
   </div>
+<div class="alert success" *ngIf="formSubmitted && isSuccess">
+  {{thongBao}}
 </div>
+
+<div class="alert fail" *ngIf="formSubmitted && !isSuccess">
+  {{thongBao}}
+</div>  
+</div>
+
+
 
 <router-outlet *ngIf="isForgotPasswordRoute"></router-outlet>
 <router-outlet *ngIf="isChangePasswordRoute"></router-outlet>
